--- a/fnordspace.cabal
+++ b/fnordspace.cabal
@@ -48,7 +48,7 @@ Cabal-version:       >=1.2
 
 Executable fnordspace
   -- .hs or .lhs file containing the Main module.
-  -- Main-is:             
+  Main-is: Main.hs             
   
   -- Packages needed in order to build this package.
   Build-depends: base, hoauth       
